--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <header>
-        <h1>Student Information Form</h1>
+        <h1>Student Information Form in college</h1>
     </header>
     <main>
         <form id="studentForm">
